--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Ex quas veritatis praesentium quidem placeat ipsa,
                     ducimus voluptates sit possimus 
-                    rerum rem commodi odio ullam excepturi voluptas, dolores vero cumque deserunt!</p>
+                    rerum rem commodi odio ulla excepturi voluptas, dolores vero cumque deserunt!</p>
                     <a href="#" class="btn">Play Music</a>
                 </div>
             </div>
